Add calendar functionality.  Add basic rendering of cards for a single theater.

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -17,7 +17,7 @@
 }
 .favorites-btn{
     margin-left: 4rem;
-    background-color: white;
+    background-color: lightgray;
     border: none;
     margin: .5rem;
     padding: 0;
