--- a/src/components/FavoritesPage/FavoritesPage.css
+++ b/src/components/FavoritesPage/FavoritesPage.css
@@ -11,7 +11,7 @@
    padding: .5rem;
    font-size: 1rem;
    border-radius: .5rem;
-   background-color: white;
+   background-color: lightyellow;
    cursor: pointer;
 }
 .page-title {
