--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,8 @@
   box-sizing: border-box;
 }
 main {
-  height: 100vh;
-  width: 100vw;
+  height: 100dvh;
+  width: 100dvw;
   background-color: lightgray;
 }
 
