--- a/src/components/CardContainer/CardContainer.css
+++ b/src/components/CardContainer/CardContainer.css
@@ -17,3 +17,14 @@
   padding-left:1rem;
   padding-right:1rem;
 }
+
+@media only screen and (max-width: 600px) {
+  .cards-container {
+   
+  grid-gap: auto;
+  grid-template-columns: repeat(1, 1fr) ;
+  padding-top: 6%;
+  width: 100%;
+  height: 100%;
+}
+}
