--- a/src/components/FavoritesPage/FavoritesPage.css
+++ b/src/components/FavoritesPage/FavoritesPage.css
@@ -38,3 +38,17 @@
   margin-top: 2rem;
   font-size: 1.4rem;
 }
+.card-date {
+  font-size: 1.4rem;
+  text-align: left;
+  padding-left: 1rem;
+}
+
+@media only screen and (max-width: 600px) {
+ 
+.favorites-nav-btn {
+  position: static;
+
+}
+
+}
