--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,61 +1,57 @@
 .card {
-    height: auto;
-    border: solid .1rem black;
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    width: 30vw;
-    margin: 1rem;
-    padding: .25vh;
+  height: auto;
+  border: solid 0.1rem black;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 30vw;
+  margin: 1rem;
+  padding: 0.25vh;
 }
 .favorites-btn-container {
-    display: flex;
-    width: 100%;
-    justify-content: flex-end;
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
 }
-.favorites-btn{
-    margin-left: 4rem;
-    background-color: lightgray;
-    border: none;
-    margin: .5rem;
-    padding: 0;
-    width: 1rem;
+.favorites-btn {
+  margin-left: 4rem;
+  background-color: lightgray;
+  border: none;
+  margin: 0.5rem;
+  padding: 0;
+  width: 1rem;
 }
 .favorites-img {
-    height: 1rem;
-    width: 1rem;
+  height: 1rem;
+  width: 1rem;
 }
 .card-info {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .card-theater-name {
-    font-weight: 500;
-    font-size: 1.1rem;
-    margin-bottom: .5rem;
-    color: rgb(92, 92, 92);
+  font-weight: 500;
+  font-size: 1.1rem;
+  margin-bottom: 0.5rem;
+  color: rgb(92, 92, 92);
 }
 .card-title {
-    font-style: italic;
-    font-weight: 700;
-    font-size: 1.2rem;
+  font-style: italic;
+  font-weight: 700;
+  font-size: 1.2rem;
 }
 p.card-time {
-    color: blue;
-    margin-top: 3rem;
-    margin: .2rem;
+  color: blue;
+  margin-top: 3rem;
+  margin: 0.2rem;
 }
 
 @media only screen and (max-width: 600px) {
- 
-    .card {
-        width: 80dvw;
-    
-    }
-    
-    }
-    
+  .card {
+    width: 80dvw;
+  }
+}
